--- a/form.html
+++ b/form.html
@@ -12,5 +12,13 @@
         <label>student pass</label>
         <input type="password" title="Enter your password" placeholder="Enter your password"><br>
     </form>
+    <!-- radio -->
+     <label>Gender</label><br>
+     <input type="radio" id="html" name="adi" value="html" title="Select HTML as your option">
+     <label for="html">male</label><br>
+     <input type="radio" id="html" name="adi" value="html" title="Select HTML as your option">
+     <label for="html">female</label><br>
+     <input type="radio" id="html" name="adi" value="html" title="Select HTML as your option">
+     <label for="html">other</label><br>
 </body>
 </html>
