--- a/form.html
+++ b/form.html
@@ -20,5 +20,25 @@
      <label for="html">female</label><br>
      <input type="radio" id="html" name="adi" value="html" title="Select HTML as your option">
      <label for="html">other</label><br>
+     <!-- select -->
+    <br>
+    <label>city</label>
+    <select title="Select your city">
+        <option value="delhi">delhi</option>
+        <option value="noida">noida</option>
+        <option value="meerut">meerut</option>
+        <option value="mumbai">mumbai</option>
+    </select><br>
+    <!-- checkbox -->
+     <label>education</label><br>
+     <input type="checkbox" id="html" name="adi" value="html" title="Select HTML as your option">
+     <label for="html">10th</label><br>
+     <input type="checkbox" id="html" name="adi" value="html" title="Select HTML as your option">
+     <label for="html">12th</label><br>
+     <input type="checkbox" id="html" name="adi" value="html" title="Select HTML as your option">
+     <label for="html">graduation</label><br>
+     <input type="checkbox" id="html" name="adi" value="html" title="Select HTML as your option">
+     <label for="html">post graduation</label><br>
+     <br>
 </body>
 </html>
