--- a/form.html
+++ b/form.html
@@ -40,5 +40,7 @@
      <input type="checkbox" id="html" name="adi" value="html" title="Select HTML as your option">
      <label for="html">post graduation</label><br>
      <br>
+     <!-- button -->
+      <button type="submit">submit</button>
 </body>
 </html>
