--- a/js/function.html
+++ b/js/function.html
@@ -4,21 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #f1{
+            height: 300px;
+            width: 300px;
+            border: 2px solid black;
+            text-align: center;
+            border-radius: 10px;
+            background-color: #FFCC00;
+        }
+    </style>
 </head>
 <body>
+    <div id="f1">
+        <button onclick="first()">
+            click
+        </button>
+        <p id="aa"></p>
+    </div>
     <script>
         // function abes(){
         //     document.write("Hello World");
         // }
         // abes();
-        var a = 10;
-        var b = 20;
-        function sum(){
-            var total = a + b;
-            document.write(total);
+        // var a = 10;
+        // var b = 20;
+        // function sum(){
+        //     var total = a + b;
+        //     document.write(total);
+        // }
+        // sum();
+        function first(){
+            document.getElementById("aa").innerHTML = "Hello World";
         }
-        sum();
-        
     </script>
     
 </body>
