--- a/js/function.html
+++ b/js/function.html
@@ -5,23 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        #f1{
+        /* #f1{
             height: 300px;
             width: 300px;
             border: 2px solid black;
             text-align: center;
             border-radius: 10px;
             background-color: #FFCC00;
-        }
+        } */
     </style>
 </head>
-<body>
-    <div id="f1">
-        <button onclick="first()">
-            click
-        </button>
-        <p id="aa"></p>
-    </div>
+<body id="a">
+    <button onclick="red()">red</button>
+    <button onclick="yellow()">yellow</button>
+    <button onclick="blue()">blue</button>
     <script>
         // function abes(){
         //     document.write("Hello World");
@@ -34,8 +31,17 @@
         //     document.write(total);
         // }
         // sum();
-        function first(){
-            document.getElementById("aa").innerHTML = "Hello World";
+        // function first(){
+        //     document.getElementById("aa").innerHTML = "Hello World";
+        // }
+        function red(){
+            document.getElementById("a").style.backgroundColor = "red";
+        }
+        function yellow(){
+            document.getElementById("a").style.backgroundColor = "yellow";
+        }
+        function blue(){
+            document.getElementById("a").style.backgroundColor = "blue";
         }
     </script>
     
