--- a/js/assignment5.html
+++ b/js/assignment5.html
@@ -5,19 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Counter App</title>
   <style>
-    .card {
-      width: 400px;
+    .flex-container {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 40px;
+      margin-top: 100px;
+    }
+    .card, .card1 {
+      width: 300px;
       height: 400px;
-      border: 2px solid #000000;
+      border: 2px solid #000;
       border-radius: 8px;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      padding: 16px;
+      background: #fff;
       font-family: sans-serif;
-      margin-left: 550px;
-      margin-top: 150px;
+      padding: 0;
+      box-sizing: border-box;
+      align-items: center;
+    }
+    .card {
       background-color: yellow;
+      padding: 16px;
     }
     .header {
       display: flex;
@@ -38,29 +48,72 @@
       margin: 60px 0 20px 0;
     }
     button {
-      font-size: 24px;
-      width: 50px;
-      height: 50px;
+      font-size: 18px;
+      padding: 8px 24px;
       margin: 0 10px;
+      border-radius: 5px;
+      border: none;
+      background: #2528c6;
+      color: #fff;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #f9faf9;
+    }
+    .part1 {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+    }
+    .part1 img {
+      width: 250px;
+      height: 250px;
+      object-fit: cover;
+      border-radius: 8px 8px 0 0;
+    }
+    .part2 {
+      padding: 16px;
+      text-align: center;
+      width: 100%;
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <div class="header">
-      <div class="logo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Superman_shield.svg/1200px-Superman_shield.svg.png" alt="logo">
+  <div class="flex-container">
+    <div class="card1">
+      <div class="part1">
+        <img id="changeImg" src="https://busesandvans.tatamotors.com/assets/buses/files/2024-02/STARBUS%20SKL%2034%2BA%2BD_1.jpg?VersionId=WK18n3ah.EhjlCi8qjecT9Xz.vF28wIZ" alt="City">
       </div>
-      <h2>Counter App</h2>
+      <div class="part2">
+        <button id="changeBtn">Change</button>
+      </div>
     </div>
-    <div class="value" id="counter">0</div>
-    <div>
-      <button id="decrement">-</button>
-      <button id="increment">+</button>
+    <div class="card">
+      <div class="header">
+        <div class="logo">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Superman_shield.svg/1200px-Superman_shield.svg.png" alt="logo">
+        </div>
+        <h2>Counter App</h2>
+      </div>
+      <div class="value" id="counter">0</div>
+      <div>
+        <button id="decrement">-</button>
+        <button id="increment">+</button>
+      </div>
+    </div>
+    <div class="card1">
+      <div class="part1">
+        <img id="hideImg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsu-sIlz8r5yie-8yWiWxioqh4IoeOPZFqmA&s" alt="Nature">
+      </div>
+      <div class="part2">
+        <button id="hideBtn">Hide</button>
+      </div>
     </div>
   </div>
-
   <script>
+    // Counter logic
     const counter = document.getElementById('counter');
     const inc = document.getElementById('increment');
     const dec = document.getElementById('decrement');
@@ -81,6 +134,26 @@
         counter.textContent = value;
       } else {
         alert('Minimum limit reached');
+      }
+    };
+
+    const hideBtn = document.getElementById('hideBtn');
+    const hideImg = document.getElementById('hideImg');
+    hideBtn.onclick = () => {
+      hideImg.style.display = hideImg.style.display === 'none' ? 'block' : 'none';
+      hideBtn.textContent = hideImg.style.display === 'none' ? 'Show' : 'Hide';
+    };
+
+    const changeBtn = document.getElementById('changeBtn');
+    const changeImg = document.getElementById('changeImg');
+    let changed = false;
+    changeBtn.onclick = () => {
+      if (!changed) {
+        changeImg.src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRV560rDIeVLJPUFqJh-maQPI-x_HaezbrvrQ&s";
+        changed = true;
+      } else {
+        changeImg.src = "https://busesandvans.tatamotors.com/assets/buses/files/2024-02/STARBUS%20SKL%2034%2BA%2BD_1.jpg?VersionId=WK18n3ah.EhjlCi8qjecT9Xz.vF28wIZ";
+        changed = false;
       }
     };
   </script>
