--- a/js/array.html
+++ b/js/array.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <p id="demo"></p>
     <script>
-        const toy=["Teddy Bear", "Action Figure", "Doll", "Puzzle", "Board Game"];
+        const toy=new Array("Teddy Bear", "Action Figure", "Doll", "Puzzle", "Board Game");
         toy[2]="APPLE";
         document.getElementById("demo").innerHTML=toy;
     </script>
