--- a/js/es6/let.html
+++ b/js/es6/let.html
@@ -12,8 +12,8 @@
             // var x = 2;   // you can declare x again with var
             // document.write(x);
 
-            let x = 10; // you cant declare x again with let
-            let x = 2;
+            // let x = 10; // you cant declare x again with let
+            // let x = 2;
             document.write(x);
         }
 </script>
